--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,4 @@ COOKIE_SECRET=something
 DATABASE_TYPE=sqlite
 DATABASE_URL="postgres://localhost/medusa-store"
 REDIS_URL=redis://localhost:6379
+MEDUSA_ECOM_BACKEND_URL=http://localhost:3000
