--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "jest",
     "seed": "medusa seed -f ./data/seed.json",
     "start": "yarn build && medusa start",
-    "build:admin": "medusa-admin build"
+    "build:admin": "medusa-admin build --deployment --backend http://localhost:9000 --ecomBackend http://longvb.nett",
+    "dev:admin": "medusa-admin dev"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.21.4",
@@ -29,6 +30,7 @@
     "@medusajs/event-bus-redis": "^1.8.0",
     "@medusajs/medusa": "^1.8.0",
     "@medusajs/medusa-cli": "^1.3.9",
+    "admin-longvb": "^2.0.16",
     "babel-preset-medusa-package": "^1.1.13",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
