--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@babel/preset-typescript": "^7.21.4",
     "@medusajs/cache-inmemory": "^1.8.0",
     "@medusajs/cache-redis": "^1.8.0",
-    "@medusajs/event-bus-local": "^1.8.0",
-    "@medusajs/event-bus-redis": "^1.8.0",
-    "@medusajs/medusa": "^1.8.0",
+    "@medusajs/event-bus-local": "1.9.1",
+    "@medusajs/event-bus-redis": "1.8.3",
+    "@medusajs/medusa": "1.11.0",
     "@medusajs/medusa-cli": "^1.3.9",
     "admin-longvb": "^2.0.16",
     "babel-preset-medusa-package": "^1.1.13",
@@ -39,7 +39,8 @@
     "medusa-interfaces": "^1.3.7",
     "medusa-payment-manual": "^1.0.23",
     "medusa-payment-stripe": "^2.0.0",
-    "typeorm": "^0.3.11"
+    "medusa-plugin-sendgrid": "^1.3.9",
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.3",
