--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@medusajs/medusa": "1.15.0",
     "@medusajs/medusa-cli": "^1.3.17",
     "@medusajs/ui": "^2.2.0",
+    "@monaco-editor/react": "^4.6.0",
     "axios": "^1.5.0",
     "babel-preset-medusa-package": "^1.1.13",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-http-proxy": "^2.0.0",
     "medusa-fulfillment-manual": "^1.1.38",
     "medusa-interfaces": "^1.3.7",
     "medusa-payment-manual": "^1.0.23",
